--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "The portfolio website for Jospeh Ojo",
   "main": "server.js",
   "scripts": {
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -31,26 +33,26 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
-    "http": "0.0.0",
     "jsdom": "^15.1.1",
-    "lodash.template": "^4.4.0",
+    "memory-cache": "^0.2.0",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.6.0",
-    "csso": "^3.5.1",
-    "fs-extra": "^8.0.1",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-beautify": "^3.0.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-uglify": "^3.0.2",
-    "nodemon": "^1.19.1",
-    "parcel-bundler": "^1.12.3",
-    "postcss-modules": "^1.4.1",
-    "sass": "^1.22.0"
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2"
   }
 }
