--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "The portfolio website for Jospeh Ojo",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development",
+    "build": "export NODE_ENV=production && gulp",
+    "build:dev": "export NODE_ENV=development && gulp",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon ./server.min.js",
+    "dev": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
