--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@magento/shrink-ray": "^3.0.4",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "jsdom": "^15.1.1",
