--- a/package.json
+++ b/package.json
@@ -1,64 +1,102 @@
 {
-  "name": "joseph",
+  "name": "fastify-app",
   "version": "1.0.0",
-  "description": "The portfolio website for Jospeh Ojo",
+  "description": "A fastify app.",
   "main": "./server.min",
   "scripts": {
-    "build": "export NODE_ENV=production && gulp --gulpfile ./gulpfile.js",
-    "build:dev": "export NODE_ENV=development && gulp --gulpfile ./gulpfile.js",
-    "start": "nodemon ./server.min",
+    "test": "npm run build",
+    "dev:watch": "gulp dev && gulp watch",
+    "watch": "gulp watch",
+    "build:dev": "gulp dev",
+    "dev:build": "gulp dev",
+    "gulp:build": "gulp",
+    "build": "gulp --gulpfile ./gulpfile.min.js",
+    "start": "pm2 start ecosystem.config.js --env production",
+    "logs": "pm2 logs fastify-app",
+    "stop": "pm2 stop all",
+    "restart": "pm2 restart all",
+    "pm2-start": "pm2 start server.min.js",
     "dev": "nodemon ./server"
   },
   "engines": {
-    "node": "v12.4.0",
+    "node": "v12.5.0",
     "npm": "6.9.0"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/okikio/joseph.git"
+    "url": "git+https://github.com/okikio/fastify-app.git"
   },
   "keywords": [
-    "Joseph",
-    "Ojo",
-    "Js",
-    "Web",
+    "Fastify",
+    "Node",
     "Site",
-    "Node"
+    "Web",
+    "JS"
   ],
   "author": "Okiki Ojo",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/okikio/joseph/issues"
+    "url": "https://github.com/okikio/fastify-app/issues"
   },
-  "homepage": "https://github.com/okikio/joseph#readme",
+  "homepage": "https://github.com/okikio/fastify-app#readme",
   "dependencies": {
-    "@magento/shrink-ray": "^3.0.4",
-    "cookie-parser": "^1.4.4",
-    "debug": "^4.1.1",
-    "dotenv": "^8.0.0",
-    "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "jsdom": "^15.1.1",
-    "memory-cache": "^0.2.0",
+    "axios": "^0.19.0",
+    "cloudinary": "^1.14.0",
+    "dotenv": "^8.1.0",
+    "fast-html-parser": "^1.0.1",
+    "fastify": "^2.7.1",
+    "fastify-compress": "^0.10.0",
+    "fastify-cors": "^2.1.3",
+    "fastify-helmet": "^3.0.1",
+    "fastify-no-icon": "^3.0.0",
+    "glob": "^7.1.4",
+    "mime-types": "^2.1.24",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.1"
+    "pino-pretty": "^3.2.1",
+    "pm2": "^3.5.1",
+    "send": "^0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "autoprefixer": "^9.6.0",
-    "cssnano": "^4.1.10",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@swup/preload-plugin": "^1.0.3",
+    "@swup/scroll-plugin": "^1.0.6",
+    "animejs": "^3.1.0",
+    "autoprefixer": "^9.6.1",
+    "browser-sync": "^2.26.7",
+    "eslint": "^6.2.1",
+    "fast-stringify": "^2.0.0",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
     "gulp-beautify": "^3.0.0",
+    "gulp-better-rollup": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-if": "^2.0.2",
-    "gulp-modify-file": "^1.0.1",
     "gulp-postcss": "^8.0.0",
+    "gulp-posthtml": "^3.0.4",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-string-replace": "^1.1.2",
+    "gulp-terser": "^1.2.0",
+    "nodemon": "^1.19.1",
+    "postcss": "^7.0.17",
+    "postcss-csso": "^3.0.0",
+    "postcss-flexibility": "^2.0.0",
+    "posthtml-doctype": "^1.1.1",
+    "posthtml-inline-assets": "^3.0.0",
+    "posthtml-lazyload": "^1.0.3",
+    "posthtml-link-noreferrer": "^1.0.4",
+    "posthtml-lorem": "^1.0.0",
+    "posthtml-textr": "^1.0.5",
+    "rollup": "^1.20.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "smoothstate": "^0.7.2",
+    "swup": "^2.0.5",
+    "typographic-single-spaces": "^1.0.2"
   }
 }
