--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:build": "gulp dev",
     "gulp:build": "gulp",
     "build": "gulp --gulpfile ./gulpfile.min.js",
-    "start": "pm2 start ecosystem.config.js --env production",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "logs": "pm2 logs fastify-app",
     "stop": "pm2 stop all",
     "restart": "pm2 restart all",
