--- a/package.json
+++ b/package.json
@@ -2,21 +2,12 @@
   "name": "fastify-app",
   "version": "1.0.0",
   "description": "A fastify app.",
-  "main": "./server.min",
   "scripts": {
     "test": "yarn build",
     "dev:watch": "gulp dev && gulp watch",
     "watch": "gulp watch",
-    "build:dev": "gulp dev",
     "dev:build": "gulp dev",
-    "gulp:build": "gulp",
-    "build": "gulp --gulpfile ./gulpfile.min.js",
-    "start": "pm2-runtime start ecosystem.config.js --env production",
-    "logs": "pm2 logs fastify-app",
-    "stop": "pm2 stop all",
-    "restart": "pm2 restart all",
-    "pm2-start": "pm2 start server.min.js",
-    "dev": "nodemon ./server"
+    "build": "gulp"
   },
   "engines": {
     "node": "v12.5.0",
@@ -44,18 +35,7 @@
     "axios": "^0.19.0",
     "cloudinary": "^1.15.0",
     "dotenv": "^8.1.0",
-    "fast-html-parser": "^1.0.1",
-    "fastify": "^2.8.0",
-    "fastify-compress": "^0.11.0",
-    "fastify-cors": "^2.1.3",
-    "fastify-helmet": "^3.0.1",
-    "fastify-no-icon": "^3.0.0",
-    "glob": "^7.1.4",
-    "mime-types": "^2.1.24",
-    "morgan": "^1.9.1",
-    "pino-pretty": "^3.2.1",
-    "pm2": "^3.5.1",
-    "send": "^0.17.1"
+    "mime-types": "^2.1.24"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -80,7 +60,6 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-string-replace": "^1.1.2",
     "gulp-terser": "^1.2.0",
-    "nodemon": "^1.19.2",
     "postcss": "^7.0.18",
     "postcss-csso": "^3.0.0",
     "postcss-flexibility": "^2.0.0",
