--- a/client/manifest.json
+++ b/client/manifest.json
@@ -4,30 +4,11 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#f5f8fc",
+    "theme_color": "#4500ff",
     "description": "A simply readable portfolio app.",
     "icons": [{
-      "src": "images/touch/homescreen48.png",
-      "sizes": "48x48",
-      "type": "image/png"
-    }, {
-      "src": "images/touch/homescreen72.png",
-      "sizes": "72x72",
-      "type": "image/png"
-    }, {
-      "src": "images/touch/homescreen96.png",
-      "sizes": "96x96",
-      "type": "image/png"
-    }, {
-      "src": "images/touch/homescreen144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, {
-      "src": "images/touch/homescreen168.png",
-      "sizes": "168x168",
-      "type": "image/png"
-    }, {
-      "src": "images/touch/homescreen192.png",
-      "sizes": "192x192",
+      "src": "assets/science-256.png",
+      "sizes": "256x256",
       "type": "image/png"
     }]
   }
