--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build": "gulp"
   },
   "engines": {
-    "node": "v12.5.0",
-    "npm": "6.9.0",
-    "yarn": "1.17.3"
+    "node": "v12.11.0",
+    "npm": "6.11.3",
+    "yarn": "1.19.0"
   },
   "repository": {
     "type": "git",
@@ -77,6 +77,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "smoothstate": "^0.7.2",
     "swup": "^2.0.5",
-    "typographic-single-spaces": "^1.0.2"
+    "typographic-single-spaces": "^1.0.2",
+    "yarn": "^1.19.0"
   }
 }
