--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-string-replace": "^1.1.2",
     "gulp-terser": "^1.2.0",
+    "image-size": "^0.8.3",
     "postcss": "^7.0.18",
     "postcss-csso": "^3.0.0",
     "postcss-flexibility": "^2.0.0",
