No longer a fastify app

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/okikio/fastify-app.git"
   },
   "keywords": [
-    "Fastify",
+    "Pug",
     "Node",
     "Site",
     "Web",
