Travis use yarn please

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js:
   - "12"
+before_script:
+  - nvm install 12
+  - npm install -g yarn
+  - yarn install
 cache: npm
 cache: yarn
