nvm should work

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "reload": "gulp git:pull"
   },
   "engines": {
-    "node": "12",
-    "npm": "6",
-    "yarn": "1"
+    "node": ">=12",
+    "npm": ">=6",
+    "yarn": ">=1"
   },
   "repository": {
     "type": "git",
