--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,24 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-  - before: nvm i 12 && nvm use 12 && npm i yarn gulp -g
+  - before: nvm i 12 && nvm use 12 && npm i yarn gulp eslint -g
     init: yarn install && yarn upgrade # runs during prebuild
     command: yarn watch
+vscode:
+  extensions:
+    - michelemelluso.code-beautifier@2.3.3:aRVPC/UxkGF1U5lMncPQNw==
+    - afractal.node-essentials@1.1.0:Jxchs8x551PYj7RQCMD/Tw==
+    - jasonnutter.search-node-modules@1.3.0:G786iJxLfc//erh6tQ8MWw==
+    - msjsdiag.debugger-for-chrome@4.12.1:xXSEoy8/LqF/SyOtQTqrQw==
+    - redhat.fabric8-analytics@0.0.13:k9RQ8fqmg2WmkP2sL4ccbA==
+    - shinnn.stylelint@0.51.0:Uy6xDb5psDPzfFra0dwP4w==
+    - dzannotti.vscode-babel-coloring@0.0.4:5Rlj2/kADFIl+crtoyiywQ==
+    - dbaeumer.vscode-eslint@1.9.1:YVcwmzKVVl+zZ+wMB02GjQ==
+    - mikestead.dotenv@1.0.1:SSXjr5hZcbqSF7nMIhTNnA==
+    - GitHub.vscode-pull-request-github@0.12.0:ThlEsZVRYecpHGmaoLpBkg==
+    - eamodio.gitlens@10.1.1:W/mM/phTCRJ9XghzvZRI4g==
+    - wix.vscode-import-cost@2.12.0:Z31eYgMsqJCLYkcg0s66Ug==
+    - christian-kohler.path-intellisense@1.4.2:QnOrf5fk6KiVaQs4cNEP+w==
+    - VisualStudioExptTeam.vscodeintellicode@1.2.0:ZVy7XFOZUd4m0FZb3PUFbA==
+    - redhat.vscode-yaml@0.5.3:9PocMeslVen4COl7FQruRA==
+    - WallabyJs.quokka-vscode@1.0.259:cje34CvMWmRCPMxfiMVIng==
