--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "posthtml-lorem": "^1.0.0",
     "posthtml-match-helper": "^1.0.1",
     "posthtml-textr": "^1.0.5",
+    "rallax.js": "^2.0.4",
     "rellax": "^1.10.0",
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
