--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@rollup/plugin-json": "^4.0.0",
     "@swup/scroll-plugin": "^1.0.6",
     "animejs": "^3.1.0",
     "autoprefixer": "^9.6.1",
@@ -62,6 +63,7 @@
     "postcss": "^7.0.18",
     "postcss-csso": "^3.0.0",
     "postcss-flexibility": "^2.0.0",
+    "posthtml": "^0.12.0",
     "posthtml-doctype": "^1.1.1",
     "posthtml-inline-assets": "^3.0.0",
     "posthtml-lazyload": "^1.0.3",
@@ -73,7 +75,6 @@
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.2.0",
     "swup": "^2.0.5",
