Image lazy loading fix; specify sizes.

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "posthtml-link-noreferrer": "^1.0.4",
     "posthtml-lorem": "^1.0.0",
     "posthtml-match-helper": "^1.0.1",
+    "posthtml-parser": "^0.4.2",
     "posthtml-textr": "^1.0.5",
     "rellax": "^1.10.0",
     "rollup": "^1.21.4",
