--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   },
   "homepage": "https://github.com/okikio/fastify-app#readme",
   "dependencies": {
-    "axios": "^0.19.0",
     "cloudinary": "^1.15.0",
     "dotenv": "^8.1.0",
     "mime-types": "^2.1.24"
@@ -69,6 +68,8 @@
     "posthtml-match-helper": "^1.0.1",
     "posthtml-textr": "^1.0.5",
     "rellax": "^1.10.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
