--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
   "homepage": "https://github.com/okikio/fastify-app#readme",
   "dependencies": {
     "cloudinary": "^1.15.0",
-    "dotenv": "^8.1.0",
-    "mime-types": "^2.1.24"
+    "dotenv": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
@@ -59,6 +58,7 @@
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-terser": "^1.2.0",
+    "microicon": "^1.0.0-b.2",
     "postcss": "^7.0.18",
     "postcss-csso": "^3.0.0",
     "postcss-flexibility": "^2.0.0",
@@ -68,8 +68,6 @@
     "posthtml-match-helper": "^1.0.1",
     "posthtml-textr": "^1.0.5",
     "rellax": "^1.10.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.8",
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
