--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-beautify": "^3.0.0",
     "gulp-better-rollup": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^6.2.0",
     "gulp-postcss": "^8.0.0",
     "gulp-posthtml": "^3.0.4",
     "gulp-pug": "^4.0.1",
