--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
-  - before: nvm i 12 && nvm use 12 && npm i yarn gulp eslint -g
+  - before: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.1/install.sh | bash && nvm i 12 && nvm alias default 12 && nvm use 12 && npm i yarn gulp eslint -g
     init: yarn install && yarn upgrade # runs during prebuild
     command: yarn watch
 vscode:
