Switched to pnpm and removed blurred images

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,13 +11,14 @@ ports:
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
   - command: >
-      nvm install 12 && 
-      nvm alias default 12 && 
-      nvm use 12 && 
-      npm install -g yarn gulp && 
-      yarn install && 
-      yarn upgrade && 
-      yarn watch
+      nvm install 13 && 
+      nvm alias default 13 && 
+      nvm use 13 && 
+      npm install -g gulp pnpm &&
+      pnpm add -g pnpm && 
+      pnpm install && 
+      pnpm update && 
+      pnpm run watch
   
 vscode:
   extensions:
