--- a/package.json
+++ b/package.json
@@ -32,24 +32,24 @@
     "url": "https://github.com/okikio/fastify-app/issues"
   },
   "homepage": "https://github.com/okikio/fastify-app#readme",
-  "dependencies": {
-    "cloudinary": "^1.15.0",
-    "dotenv": "^8.1.0",
-    "gulp-changed": "^4.0.2"
-  },
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^6.0.0",
     "animejs": "^3.1.0",
     "autoprefixer": "^9.6.1",
     "browser-sync": "^2.26.7",
+    "cloudinary": "^1.15.0",
+    "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "fast-stringify": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-beautify": "^3.0.0",
     "gulp-better-rollup": "^4.0.1",
+    "gulp-changed": "^4.0.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.2.0",
     "gulp-postcss": "^8.0.0",
@@ -70,10 +70,7 @@
     "posthtml-textr": "^1.0.5",
     "rollup": "^1.21.4",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "typographic-single-spaces": "^1.0.2",
-    "yarn": "^1.19.1"
+    "typographic-single-spaces": "^1.0.2"
   }
 }
