--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
   },
   "homepage": "https://github.com/okikio/fastify-app#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@rollup/plugin-commonjs": "^11.0.0",
+    "@rollup/plugin-buble": "^0.21.0",
+    "@rollup/plugin-commonjs": "^11.0.1",
     "@rollup/plugin-json": "^4.0.1",
-    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^7.0.0",
     "animejs": "^3.1.0",
-    "autoprefixer": "^9.7.3",
+    "autoprefixer": "^9.7.4",
     "browser-sync": "^2.26.7",
-    "cloudinary": "^1.18.1",
+    "cloudinary": "^1.19.0",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "fast-stringify": "^2.0.0",
@@ -68,7 +69,7 @@
     "posthtml-link-noreferrer": "^1.0.5",
     "posthtml-match-helper": "^1.0.1",
     "posthtml-textr": "^1.0.5",
-    "rollup": "^1.27.14",
+    "rollup": "^1.29.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "typographic-single-spaces": "^1.0.2"
