--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "The porfolio of Joseph, it contains all amazing projects etc...",
     "scripts": {
         "test": "gulp",
-        "watch": "gulp && gulp watch",
+        "watch": "gulp pre-watch && gulp watch",
         "develop": "gulp dev",
         "build": "gulp",
         "publish": "gulp git:push",
@@ -36,11 +36,10 @@
         "tech",
         "website",
         "netlify",
-        "Pug",
-        "Node",
-        "Site",
-        "Web",
-        "JS"
+        "pug",
+        "node",
+        "site",
+        "js"
     ],
     "author": "Okiki Ojo",
     "license": "ISC",
@@ -52,8 +51,7 @@
         "@babel/core": "^7.8.3",
         "@babel/preset-env": "^7.8.3",
         "@barba/core": "^2.9.7",
-        "@fullhuman/postcss-purgecss": "^1.3.0",
-        "@rollup/plugin-buble": "^0.21.0",
+        "@fullhuman/postcss-purgecss": "^2.0.5",
         "@rollup/plugin-commonjs": "^11.0.1",
         "@rollup/plugin-json": "^4.0.1",
         "@rollup/plugin-node-resolve": "^7.0.0",
@@ -63,23 +61,22 @@
         "cloudinary": "^1.19.0",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
-        "fast-stringify": "^2.0.0",
         "gulp": "^4.0.2",
         "gulp-beautify": "^3.0.0",
         "gulp-better-rollup": "^4.0.1",
-        "gulp-changed": "^4.0.2",
         "gulp-htmlmin": "^5.0.1",
-        "gulp-imagemin": "^6.2.0",
+        "gulp-imagemin": "^7.1.0",
         "gulp-postcss": "^8.0.0",
         "gulp-posthtml": "^3.0.4",
         "gulp-pug": "^4.0.1",
-        "gulp-rename": "^1.4.0",
+        "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.0.2",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-terser": "^1.2.0",
         "microicon": "^1.0.0-b.2",
+        "pnpm": "^4.8.0",
         "postcss": "^7.0.26",
-        "postcss-csso": "^3.0.0",
+        "postcss-csso": "^4.0.0",
         "postcss-flexibility": "^2.0.0",
         "posthtml-doctype": "^1.1.1",
         "posthtml-inline-assets": "^3.0.0",
