--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@babel/core": "^7.8.3",
         "@babel/preset-env": "^7.8.3",
         "@barba/core": "^2.9.7",
+        "@barba/prefetch": "^2.1.10",
         "@fullhuman/postcss-purgecss": "^2.0.5",
         "@rollup/plugin-commonjs": "^11.0.1",
         "@rollup/plugin-json": "^4.0.1",
