Added SWUP head plugin  to avoid SEO errors

--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
         "@rollup/plugin-commonjs": "^11.0.1",
         "@rollup/plugin-json": "^4.0.1",
         "@rollup/plugin-node-resolve": "^7.0.0",
+        "@swup/head-plugin": "^1.0.2",
+        "@swup/preload-plugin": "^1.0.3",
+        "@swup/scroll-plugin": "^1.0.6",
         "autoprefixer": "^9.7.4",
         "browser-sync": "^2.26.7",
         "cloudinary": "^1.19.0",
@@ -85,11 +88,7 @@
         "rollup": "^1.31.0",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-node-builtins": "^2.1.2",
+        "swup": "^2.0.8",
         "typographic-single-spaces": "^1.0.2"
-    },
-    "dependencies": {
-        "@swup/preload-plugin": "^1.0.3",
-        "@swup/scroll-plugin": "^1.0.6",
-        "swup": "^2.0.8"
     }
 }
