--- a/package.json
+++ b/package.json
@@ -62,11 +62,13 @@
         "cloudinary": "^1.19.0",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
+        "fast-stringify": "^2.0.0",
         "gulp": "^4.0.2",
         "gulp-beautify": "^3.0.0",
         "gulp-better-rollup": "^4.0.1",
         "gulp-htmlmin": "^5.0.1",
         "gulp-imagemin": "^7.1.0",
+        "gulp-nunjucks": "^5.0.1",
         "gulp-postcss": "^8.0.0",
         "gulp-posthtml": "^3.0.4",
         "gulp-pug": "^4.0.1",
