--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "gulp": "^4.0.2",
         "gulp-beautify": "^3.0.0",
         "gulp-better-rollup": "^4.0.1",
+        "gulp-debug": "^4.0.0",
         "gulp-htmlmin": "^5.0.1",
         "gulp-imagemin": "^7.1.0",
         "gulp-nunjucks": "^5.0.1",
@@ -78,7 +79,6 @@
         "gulp-terser": "^1.2.0",
         "lazysizes": "^5.2.0",
         "microicon": "^1.0.0-b.2",
-        "pnpm": "^4.9.3",
         "postcss": "^7.0.26",
         "postcss-csso": "^4.0.0",
         "postcss-flexibility": "^2.0.0",
