Major gulp changes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "joseph",
-    "version": "1.0.0",
-    "description": "The porfolio of Joseph, it contains all amazing projects etc...",
+    "name": "josephojo",
+    "version": "2.0.0",
+    "description": "The porfolio of Joseph ojo, it contains all his amazing projects etc...",
     "scripts": {
         "test": "gulp",
         "watch": "gulp pre-watch && gulp watch",
@@ -41,12 +41,14 @@
         "site",
         "js"
     ],
-    "author": "Okiki Ojo",
-    "license": "ISC",
+    "author": "Okiki Ojo (okikio)",
+    "copyright": "Joseph ojo",
+    "homepage": "https://www.josephojo.com/",
+    "github": "https://github.com/okikio/joseph/",
+    "license": "AGPL-3.0-only",
     "bugs": {
         "url": "https://github.com/okikio/joseph/issues"
     },
-    "homepage": "https://github.com/okikio/joseph#readme",
     "dependencies": {
         "@babel/core": "^7.8.4",
         "@babel/preset-env": "^7.8.4",
@@ -62,26 +64,32 @@
         "cloudinary": "^1.19.0",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
+        "fancy-log": "^1.3.3",
         "fast-stringify": "^2.0.0",
+        "git-rev-sync": "^2.0.0",
         "gulp": "^4.0.2",
         "gulp-beautify": "^3.0.0",
         "gulp-better-rollup": "^4.0.1",
         "gulp-debug": "^4.0.0",
+        "gulp-favicons": "^2.4.0",
+        "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
         "gulp-imagemin": "^7.1.0",
         "gulp-nunjucks": "^5.0.1",
+        "gulp-plumber": "^1.2.1",
         "gulp-postcss": "^8.0.0",
         "gulp-posthtml": "^3.0.4",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.0.2",
+        "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-terser": "^1.2.0",
         "lazysizes": "^5.2.0",
         "microicon": "^1.0.0-b.2",
+        "moment": "^2.24.0",
         "postcss": "^7.0.26",
         "postcss-csso": "^4.0.0",
-        "postcss-flexibility": "^2.0.0",
         "posthtml-doctype": "^1.1.1",
         "posthtml-inline-assets": "^3.0.0",
         "posthtml-link-noreferrer": "^1.0.5",
