--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     ],
     "author": "Okiki Ojo (okikio)",
     "copyright": "Joseph ojo",
-    "homepage": "https://www.josephojo.com/",
+    "homepage": "https://josephojo.com/",
     "github": "https://github.com/okikio/joseph/",
     "license": "AGPL-3.0-only",
     "bugs": {
