Cleaner animation, dark and light mode bugs fixed

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "js"
     ],
     "author": "Okiki Ojo (okikio)",
-    "copyright": "Joseph ojo",
+    "copyright": "Joseph Ojo",
     "homepage": "https://josephojo.com/",
     "github": "https://github.com/okikio/joseph/",
     "license": "AGPL-3.0-only",
