--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
         "@swup/head-plugin": "^1.0.2",
         "@swup/preload-plugin": "^1.0.3",
         "@swup/scroll-plugin": "^1.0.6",
+        "JSON2": "^0.1.0",
         "autoprefixer": "^9.7.4",
         "browser-sync": "^2.26.7",
         "cloudinary": "^1.19.0",
         "dotenv": "^8.2.0",
+        "es5-shim": "^4.5.13",
         "eslint": "^6.8.0",
         "fancy-log": "^1.3.3",
         "fast-stringify": "^2.0.0",
@@ -85,9 +87,12 @@
         "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-terser": "^1.2.0",
+        "html5shiv": "^3.7.3",
         "lazysizes": "^5.2.0",
+        "match-media": "^0.2.0",
         "microicon": "^1.0.0-b.2",
         "moment": "^2.24.0",
+        "nwmatcher": "^1.4.4",
         "postcss": "^7.0.26",
         "postcss-csso": "^4.0.0",
         "posthtml-doctype": "^1.1.1",
@@ -97,9 +102,11 @@
         "posthtml-match-helper": "^1.0.1",
         "posthtml-textr": "^1.0.5",
         "posthtml-transformer": "^0.1.2",
+        "respond.js": "^1.4.2",
         "rollup": "^1.31.1",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-node-builtins": "^2.1.2",
+        "selectivizr": "^1.0.3",
         "swup": "^2.0.8",
         "typographic-single-spaces": "^1.0.2",
         "yarn": "^1.22.0"
