--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -17,7 +17,7 @@ tasks:
       npm install -g gulp yarn &&
       yarn &&
       echo "dev=true" > .env &&
-      yarn update &&
+      yarn upgrade &&
       yarn watch
 
 vscode:
@@ -35,3 +35,4 @@ vscode:
     - christian-kohler.path-intellisense@1.4.2:QnOrf5fk6KiVaQs4cNEP+w==
     - VisualStudioExptTeam.vscodeintellicode@1.2.0:ZVy7XFOZUd4m0FZb3PUFbA==
     - redhat.vscode-yaml@0.5.3:9PocMeslVen4COl7FQruRA==
+    - ritwickdey.LiveServer@5.6.1:wV4LBkq6Z5s1xwf2HrB+cw==
