Fixed all major bugs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "josephojo",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "The porfolio of Joseph ojo, it contains all his amazing projects etc...",
     "scripts": {
         "test": "gulp",
@@ -44,6 +44,7 @@
     "author": "Okiki Ojo (okikio)",
     "copyright": "Joseph Ojo",
     "homepage": "https://josephojo.com/",
+    "developerURL": "https://github.com/okikio/",
     "github": "https://github.com/okikio/joseph/",
     "license": "AGPL-3.0-only",
     "bugs": {
@@ -72,18 +73,16 @@
         "gulp": "^4.0.2",
         "gulp-beautify": "^3.0.0",
         "gulp-better-rollup": "^4.0.1",
-        "gulp-debug": "^4.0.0",
-        "gulp-favicons": "^2.4.0",
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
         "gulp-imagemin": "^7.1.0",
         "gulp-nunjucks": "^5.0.1",
-        "gulp-plumber": "^1.2.1",
         "gulp-postcss": "^8.0.0",
         "gulp-posthtml": "^3.0.4",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.0.2",
+        "gulp-sitemap": "^7.6.0",
         "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-terser": "^1.2.0",
@@ -96,7 +95,6 @@
         "postcss": "^7.0.26",
         "postcss-csso": "^4.0.0",
         "posthtml-doctype": "^1.1.1",
-        "posthtml-inline-assets": "^3.0.0",
         "posthtml-link-noreferrer": "^1.0.5",
         "posthtml-lorem": "^1.0.0",
         "posthtml-match-helper": "^1.0.1",
