--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "josephojo",
-    "version": "2.0.1",
+    "version": "2.0.2",
     "description": "The porfolio of Joseph ojo, it contains all his amazing projects etc...",
     "scripts": {
         "test": "gulp",
@@ -54,6 +54,7 @@
         "@babel/core": "^7.8.4",
         "@babel/preset-env": "^7.8.4",
         "@fullhuman/postcss-purgecss": "^2.0.6",
+        "@rollup/plugin-buble": "^0.21.1",
         "@rollup/plugin-commonjs": "^11.0.2",
         "@rollup/plugin-json": "^4.0.2",
         "@rollup/plugin-node-resolve": "^7.1.1",
@@ -64,11 +65,9 @@
         "browser-sync": "^2.26.7",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
-        "fancy-log": "^1.3.3",
         "fast-stringify": "^2.0.0",
         "git-rev-sync": "^2.0.0",
         "gulp": "^4.0.2",
-        "gulp-beautify": "^3.0.0",
         "gulp-better-rollup": "^4.0.1",
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
@@ -82,8 +81,6 @@
         "gulp-sitemap": "^7.6.0",
         "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
-        "gulp-sri-hash": "^2.2.1",
-        "gulp-terser": "^1.2.0",
         "microicon": "^1.0.0-b.2",
         "moment": "^2.24.0",
         "postcss": "^7.0.26",
@@ -97,6 +94,7 @@
         "rollup": "^1.31.1",
         "rollup-plugin-babel": "^4.3.3",
         "rollup-plugin-node-builtins": "^2.1.2",
+        "rollup-plugin-terser": "^5.3.0",
         "swup": "^2.0.8",
         "typographic-single-spaces": "^1.0.2",
         "yarn": "^1.22.0"
