--- a/package.json
+++ b/package.json
@@ -92,8 +92,7 @@
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-terser": "^5.3.0",
         "swup": "^2.0.9",
-        "typographic-single-spaces": "^1.0.2",
-        "yarn": "^1.22.4"
+        "typographic-single-spaces": "^1.0.2"
     },
     "devDependencies": {
         "browser-sync": "^2.26.7"
