--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
+dist: xenial
+os: linux
 node_js:
   - "13"
-cache: npm
-cache: yarn
+cache: 
+  npm: true
+  yarn: true
+  directories:
+    - node_modules
