--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -15,7 +15,7 @@ tasks:
       nvm alias default 13 &&
       nvm use 13 &&
       npm install -g gulp yarn &&
-      echo "dev=true" > .env &&
+      echo -e "dev=true\ngithub_pages=true" > .env &&
       yarn &&
       yarn upgrade &&
       yarn watch
