--- a/package.json
+++ b/package.json
@@ -51,16 +51,20 @@
         "url": "https://github.com/okikio/joseph/issues"
     },
     "dependencies": {
+        "@swup/head-plugin": "^1.0.2",
+        "@swup/preload-plugin": "^1.0.3",
+        "@swup/scroll-plugin": "^1.0.6",
+        "swup": "^2.0.9"
+    },
+    "devDependencies": {
         "@babel/core": "^7.9.0",
         "@babel/preset-env": "^7.9.0",
         "@fullhuman/postcss-purgecss": "^2.1.0",
         "@rollup/plugin-buble": "^0.21.1",
         "@rollup/plugin-commonjs": "^11.0.2",
         "@rollup/plugin-node-resolve": "^7.1.1",
-        "@swup/head-plugin": "^1.0.2",
-        "@swup/preload-plugin": "^1.0.3",
-        "@swup/scroll-plugin": "^1.0.6",
         "autoprefixer": "^9.7.5",
+        "browser-sync": "^2.26.7",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "fast-stringify": "^2.0.0",
@@ -68,6 +72,7 @@
         "gulp-better-rollup": "^4.0.1",
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
+        "gulp-minify-inline-json": "^1.3.4",
         "gulp-nunjucks": "^5.0.1",
         "gulp-postcss": "^8.0.0",
         "gulp-posthtml": "^3.0.4",
@@ -77,6 +82,7 @@
         "gulp-sitemap": "^7.6.0",
         "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
+        "gulp-terser": "^1.2.0",
         "microicon": "^1.0.0-b.2",
         "moment": "^2.24.0",
         "postcss": "^7.0.27",
@@ -87,13 +93,8 @@
         "posthtml-match-helper": "^1.0.1",
         "posthtml-textr": "^1.0.5",
         "posthtml-transformer": "^0.1.2",
-        "rollup": "^2.2.0",
+        "rollup": "^2.3.0",
         "rollup-plugin-babel": "^4.4.0",
-        "rollup-plugin-terser": "^5.3.0",
-        "swup": "^2.0.9",
         "typographic-single-spaces": "^1.0.2"
-    },
-    "devDependencies": {
-        "browser-sync": "^2.26.7"
     }
 }
