Testing some plugins

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -1,2 +1,8 @@
 [build]
   ignore = "git diff / /"
+
+[[plugins]]
+  package = "@netlify/plugin-sitemap"
+
+  [plugins.inputs]
+    buildDir = "public"
