--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -11,10 +11,7 @@ ports:
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/44_config_start_tasks/
 tasks:
   - command: >
-      nvm install 13 &&
-      nvm alias default 13 &&
-      nvm use 13 &&
-      npm install -g gulp yarn &&
+      npm install -g gulp &&
       echo -e "dev=true\ngithub_pages=true" > .env &&
       yarn &&
       yarn upgrade &&
