--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "josephojo",
-    "version": "2.0.2",
+    "version": "2.5.0",
     "description": "The porfolio of Joseph ojo, it contains all his amazing projects etc...",
     "scripts": {
         "test": "gulp",
@@ -52,17 +52,18 @@
     },
     "dependencies": {
         "@swup/head-plugin": "^1.0.2",
+        "@swup/preload-plugin": "^1.0.3",
         "@swup/scroll-plugin": "^1.0.6",
         "swup": "^2.0.9"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
-        "@babel/preset-env": "^7.9.0",
-        "@fullhuman/postcss-purgecss": "^2.1.0",
-        "@rollup/plugin-buble": "^0.21.1",
-        "@rollup/plugin-commonjs": "^11.0.2",
-        "@rollup/plugin-node-resolve": "^7.1.1",
-        "autoprefixer": "^9.7.5",
+        "@babel/preset-env": "^7.9.5",
+        "@fullhuman/postcss-purgecss": "^2.1.2",
+        "@rollup/plugin-buble": "^0.21.3",
+        "@rollup/plugin-commonjs": "^11.1.0",
+        "@rollup/plugin-node-resolve": "^7.1.3",
+        "autoprefixer": "^9.7.6",
         "browser-sync": "^2.26.7",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
@@ -90,7 +91,7 @@
         "posthtml-match-helper": "^1.0.1",
         "posthtml-textr": "^1.0.5",
         "posthtml-transformer": "^0.1.2",
-        "rollup": "^2.3.0",
+        "rollup": "^2.6.1",
         "rollup-plugin-babel": "^4.4.0",
         "rollup-plugin-terser": "^5.3.0",
         "typographic-single-spaces": "^1.0.2"
