--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "fast-stringify": "^2.0.0",
         "gulp": "^4.0.2",
         "gulp-better-rollup": "^4.0.1",
+        "gulp-cached": "^1.1.1",
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
         "gulp-minify-inline-json": "^1.3.4",
