--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
     "[jsonc]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
-    "liveServer.settings.root": "/docs",
+    "liveServer.settings.root": "/public",
     "editor.columnSelection": false,
     "editor.multiCursorModifier": "ctrlCmd",
     "files.watcherExclude": {
