--- a/client/now.json
+++ b/client/now.json
@@ -1,8 +1,7 @@
 {
     "build": {
         "env": {
-            "dev": "false",
-            "github_pages": "true"
+            "dev": "false"
         }
     }
 }
