Better font loading

--- a/client/netlify.toml
+++ b/client/netlify.toml
@@ -11,7 +11,7 @@ package = "netlify-plugin-subfont"
   # An array of glob patterns for pages on your site
   # Recursive traversal will start from these
   entryPoints = [
-    "*.html",
+    "**/*.html",
   ]
 
   # Follow your links across all pages to optimize the fonts across the antire site
