--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
     "description": "The porfolio of Joseph ojo, it contains all his amazing projects etc...",
     "scripts": {
         "test": "gulp",
-        "watch": "gulp frontend && gulp watch",
-        "develop": "gulp dev",
-        "build": "gulp",
-        "publish": "gulp git:push",
-        "reload": "gulp git:pull"
+        "watch": "npx cross-env NODE_ENV=development gulp doWatchFiles",
+        "develop": "npx cross-env NODE_ENV=development gulp develop",
+        "build": "gulp"
     },
     "engines": {
         "node": ">=12",
@@ -58,16 +56,19 @@
         "swup": "^2.0.9"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/preset-env": "^7.9.5",
+        "@babel/core": "^7.9.6",
+        "@babel/preset-env": "^7.9.6",
+        "@babel/register": "^7.9.0",
         "@fullhuman/postcss-purgecss": "^2.1.2",
         "@rollup/plugin-buble": "^0.21.3",
         "@rollup/plugin-commonjs": "^11.1.0",
         "@rollup/plugin-node-resolve": "^7.1.3",
         "autoprefixer": "^9.7.6",
         "browser-sync": "^2.26.7",
+        "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
+        "esm": "^3.2.25",
         "fast-stringify": "^2.0.0",
         "gulp": "^4.0.2",
         "gulp-better-rollup": "^4.0.1",
