--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 dist: xenial
 os: linux
+before_script:
+  - yarn --immutable
 node_js:
-  - "13"
+  - "14"
 cache: 
   npm: true
-  yarn: true
   directories:
     - node_modules
