--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,23 +23,23 @@
   },
   "liveServer.settings.file": "/404.html",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#fbed80",
-    "activityBar.activeBorder": "#06b9a5",
-    "activityBar.background": "#fbed80",
+    "activityBar.activeBackground": "#ff6433",
+    "activityBar.activeBorder": "#00ff3d",
+    "activityBar.background": "#ff6433",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#06b9a5",
+    "activityBarBadge.background": "#00ff3d",
     "activityBarBadge.foreground": "#15202b",
-    "statusBar.background": "#f9e64f",
-    "statusBar.border": "#f9e64f",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#f7df1e",
-    "titleBar.activeBackground": "#f9e64f",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.border": "#f9e64f",
-    "titleBar.inactiveBackground": "#f9e64f99",
-    "titleBar.inactiveForeground": "#15202b99"
-},
-  "peacock.color": "#f9e64f",
+    "statusBar.background": "#ff3d00",
+    "statusBar.border": "#ff3d00",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#ff6433",
+    "titleBar.activeBackground": "#ff3d00",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.border": "#ff3d00",
+    "titleBar.inactiveBackground": "#ff3d0099",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "#ff3d00",
   "eslint.nodePath": ".vscode/pnpify"
 }
