--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,5 @@
     "titleBar.inactiveBackground": "#ff3d0099",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#ff3d00",
-  "eslint.nodePath": ".vscode/pnpify"
+  "peacock.color": "#ff3d00"
 }
