--- a/package.json
+++ b/package.json
@@ -57,21 +57,22 @@
         "@swup/head-plugin": "^1.0.2",
         "@swup/scroll-plugin": "^1.0.6",
         "delegate": "^3.2.0",
-        "swup": "^2.0.9"
+        "swup": "^2.0.11"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/register": "^7.9.0",
-        "@fullhuman/postcss-purgecss": "^2.2.0",
+        "@babel/core": "^7.11.6",
+        "@babel/preset-env": "^7.11.5",
+        "@babel/register": "^7.11.5",
+        "@fullhuman/postcss-purgecss": "^2.3.0",
+        "@rollup/plugin-babel": "^5.2.1",
         "@rollup/plugin-buble": "^0.21.3",
         "@rollup/plugin-commonjs": "^11.1.0",
         "@rollup/plugin-node-resolve": "^7.1.3",
-        "autoprefixer": "^9.8.0",
-        "browser-sync": "^2.26.7",
+        "autoprefixer": "^9.8.6",
+        "browser-sync": "^2.26.12",
         "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
-        "eslint": "^7.0.0",
+        "eslint": "^7.10.0",
         "esm": "^3.2.25",
         "fast-stringify": "^2.0.0",
         "gulp": "^4.0.2",
@@ -80,28 +81,27 @@
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
         "gulp-minify-inline-json": "^1.3.4",
-        "gulp-nunjucks": "^5.0.1",
+        "gulp-nunjucks": "^5.1.0",
         "gulp-postcss": "^8.0.0",
-        "gulp-posthtml": "^3.0.4",
+        "gulp-posthtml": "^3.0.5",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^2.0.0",
         "gulp-sass": "^4.1.0",
         "gulp-sitemap": "^7.6.0",
         "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
-        "moment": "^2.24.0",
-        "postcss": "^7.0.30",
+        "moment": "^2.29.0",
+        "pnpm": "^5.8.0",
+        "postcss": "^7.0.35",
         "postcss-csso": "^4.0.0",
         "posthtml-doctype": "^1.1.1",
-        "posthtml-link-noreferrer": "^1.0.7",
         "posthtml-lorem": "^1.0.0",
         "posthtml-match-helper": "^1.0.1",
         "posthtml-textr": "^1.0.5",
         "posthtml-transformer": "^0.1.2",
-        "rollup": "^2.10.3",
-        "rollup-plugin-babel": "^4.4.0",
-        "rollup-plugin-terser": "^5.3.0",
+        "rollup": "^2.28.2",
+        "rollup-plugin-terser": "^5.3.1",
         "typographic-single-spaces": "^1.0.2",
-        "yarn": "^1.22.4"
+        "ultra-runner": "^3.5.0"
     }
 }
