--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "scripts": {
         "test": "gulp",
         "workspace": "echo -e 'dev=true' > .env && yarn && yarn upgrade",
-        "watch": "npx cross-env NODE_ENV=development gulp doWatchFiles",
-        "develop": "npx cross-env NODE_ENV=development gulp develop",
+        "watch": "npx cross-env NODE_ENV=development gulp serve",
+        "develop": "npx cross-env NODE_ENV=development gulp dev-build",
         "build": "gulp"
     },
     "engines": {
@@ -63,26 +63,27 @@
         "@babel/core": "^7.12.3",
         "@babel/preset-env": "^7.12.1",
         "@babel/register": "^7.12.1",
-        "@fullhuman/postcss-purgecss": "^2.3.0",
+        "@fullhuman/postcss-purgecss": "^3.0.0",
         "@rollup/plugin-babel": "^5.2.1",
         "@rollup/plugin-buble": "^0.21.3",
-        "@rollup/plugin-commonjs": "^15.1.0",
-        "@rollup/plugin-node-resolve": "^9.0.0",
-        "autoprefixer": "^9.8.6",
+        "@rollup/plugin-commonjs": "^16.0.0",
+        "@rollup/plugin-node-resolve": "^10.0.0",
+        "autoprefixer": "^10.0.1",
         "browser-sync": "^2.26.13",
         "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
-        "eslint": "^7.12.0",
-        "esm": "^3.2.25",
+        "esbuild": "^0.8.0",
+        "eslint": "^7.12.1",
         "fast-stringify": "^2.0.0",
         "gulp": "^4.0.2",
         "gulp-better-rollup": "^4.0.1",
         "gulp-cached": "^1.1.1",
+        "gulp-esbuild": "^0.2.0",
         "gulp-header": "^2.0.9",
         "gulp-htmlmin": "^5.0.1",
         "gulp-minify-inline-json": "^1.3.4",
         "gulp-nunjucks": "^5.1.0",
-        "gulp-postcss": "^8.0.0",
+        "gulp-postcss": "^9.0.0",
         "gulp-posthtml": "^3.0.5",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^2.0.0",
@@ -90,16 +91,19 @@
         "gulp-sitemap": "^7.6.0",
         "gulp-size": "^3.0.0",
         "gulp-sourcemaps": "^2.6.5",
+        "merge-stream": "^2.0.0",
         "moment": "^2.29.1",
-        "pnpm": "^5.10.1",
-        "postcss": "^7.0.35",
-        "postcss-csso": "^4.0.0",
+        "pnpm": "^5.10.3",
+        "postcss": "^8.1.4",
+        "postcss-csso": "^5.0.0",
         "posthtml-doctype": "^1.1.1",
+        "posthtml-inline-assets": "^3.1.0",
         "posthtml-lorem": "^1.0.0",
         "posthtml-match-helper": "^1.0.1",
         "posthtml-textr": "^1.0.5",
         "posthtml-transformer": "^0.1.2",
         "rollup": "^2.32.1",
+        "rollup-plugin-esbuild": "^2.5.2",
         "rollup-plugin-terser": "^7.0.2",
         "typographic-single-spaces": "^1.0.2",
         "ultra-runner": "^3.5.0"
