--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ dist: xenial
 os: linux
 node_js:
   - "15"
-cache: 
-  npm: true
+cache:
+  npm: false
   directories:
-    - node_modules
+    - "~/.pnpm-store"
+before_install:
+  - curl -f https://get.pnpm.io/v6.js | node - add --global pnpm@6
+  - pnpm config set store-dir ~/.pnpm-store
+install:
+  - pnpm install
