--- a/package.json
+++ b/package.json
@@ -14,31 +14,20 @@
         "url": "git+https://github.com/okikio/joseph.git"
     },
     "keywords": [
-        "Joseph Ojo",
-        "josephojo",
-        "josephojo.com",
         "joseph",
         "ojo",
         "portfolio",
         "engineer",
         "web",
         "mechatronics",
-        "mech",
         "robots",
         "UOIT",
-        "OntarioTech",
-        "tech",
-        "website",
-        "netlify",
-        "pug",
-        "node",
-        "site",
-        "js"
+        "OntarioTech"
     ],
     "author": {
         "name": "Okiki Ojo",
         "email": "hey@okikio.dev",
-        "url": "okikio.dev"
+        "url": "https://okikio.dev"
     },
     "copyright": "Joseph Ojo",
     "homepage": "https://josephojo.com/",
@@ -49,48 +38,34 @@
         "url": "https://github.com/okikio/joseph/issues"
     },
     "dependencies": {
-        "@okikio/native": "^2.0.4",
-        "@swup/head-plugin": "^1.2.0",
+        "@okikio/native": "^2.1.8",
+        "@swup/preload-plugin": "^1.0.3",
         "@swup/scroll-plugin": "^1.1.0",
-        "delegate": "^3.2.0",
+        "sass": "^1.34.0",
         "swup": "^2.0.14"
     },
     "devDependencies": {
         "@fullhuman/postcss-purgecss": "^4.0.3",
-        "autoprefixer": "^10.2.5",
+        "autoprefixer": "^10.2.6",
         "browser-sync": "^2.26.14",
-        "chalk": "^4.1.1",
-        "dotenv": "^9.0.0",
-        "esbuild": "^0.11.18",
+        "dotenv": "^9.0.2",
+        "esbuild": "^0.11.23",
+        "fibers": "^5.0.0",
         "gulp": "^4.0.2",
-        "gulp-esbuild": "^0.7.6",
+        "gulp-esbuild": "^0.7.7",
+        "gulp-if": "^3.0.0",
         "gulp-minify-inline-json": "^1.4.2",
         "gulp-plumber": "^1.2.1",
         "gulp-postcss": "^9.0.0",
-        "gulp-posthtml": "^3.0.5",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^2.0.0",
+        "gulp-sass": "^4.1.0",
         "gulp-sitemap": "^8.0.0",
         "gulp-size": "^4.0.0",
         "gulp-terser": "^2.0.1",
         "gulp-typescript": "^6.0.0-alpha.1",
-        "gzip-size": "^6.0.0",
-        "lodash-es": "^4.17.21",
-        "plugin-error": "^1.0.1",
-        "pnpm": "^6.2.5",
-        "postcss": "^8.2.14",
+        "postcss": "^8.3.0",
         "postcss-csso": "^5.0.1",
-        "posthtml": "^0.15.2",
-        "posthtml-lorem": "^1.0.0",
-        "posthtml-textr": "^1.0.5",
-        "pretty-bytes": "^5.6.0",
-        "replace-ext": "^2.0.0",
-        "sass": "^1.32.12",
-        "strip-ansi": "^7.0.0",
-        "through2": "^4.0.2",
-        "typescript": "^4.2.4",
-        "typographic-single-spaces": "^1.0.2",
-        "ultra-runner": "^3.10.5",
-        "vinyl-sourcemaps-apply": "^0.2.1"
+        "typescript": "^4.3.2"
     }
 }
