--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
         "@okikio/native": "^2.1.8",
         "@swup/preload-plugin": "^1.0.3",
         "@swup/scroll-plugin": "^1.1.0",
-        "sass": "^1.34.0",
+        "sass": "^1.34.1",
         "swup": "^2.0.14"
     },
     "devDependencies": {
+        "@csstools/postcss-sass": "^4.0.0",
         "@fullhuman/postcss-purgecss": "^4.0.3",
         "autoprefixer": "^10.2.6",
         "browser-sync": "^2.26.14",
+        "del": "^6.0.0",
         "dotenv": "^9.0.2",
         "esbuild": "^0.11.23",
         "fibers": "^5.0.0",
@@ -59,13 +61,15 @@
         "gulp-postcss": "^9.0.0",
         "gulp-pug": "^4.0.1",
         "gulp-rename": "^2.0.0",
-        "gulp-sass": "^4.1.0",
         "gulp-sitemap": "^8.0.0",
-        "gulp-size": "^4.0.0",
+        "gulp-size": "^4.0.1",
         "gulp-terser": "^2.0.1",
         "gulp-typescript": "^6.0.0-alpha.1",
         "postcss": "^8.3.0",
         "postcss-csso": "^5.0.1",
+        "postcss-easy-import": "^3.0.0",
+        "postcss-scss": "^3.0.5",
+        "tailwindcss": "^2.1.4",
         "typescript": "^4.3.2"
     }
 }
