--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
         "@csstools/postcss-sass": "^4.0.0",
         "@fullhuman/postcss-purgecss": "^4.0.3",
         "autoprefixer": "^10.2.6",
-        "browser-sync": "^2.26.14",
+        "browser-sync": "^2.27.3",
+        "cloudinary": "^1.26.1",
         "del": "^6.0.0",
         "dotenv": "^10.0.0",
         "esbuild": "^0.12.9",
